--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: "$kotlin_version"
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
     compile group: "org.springframework.boot", name: "spring-boot-starter-web"
-    compile group: "com.fasterxml.jackson.module", name: 'jackson-module-afterburner', version: "$fasterxml_version"
+    compile group: "com.fasterxml.jacks2on.module", name: 'jackson-module-afterburner', version: "$fasterxml_version"
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "$fasterxml_version"
     compile group: 'javax.xml.bind', name: 'jaxb-pl.api', version: "$jaxb_version"
 
