--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     ext.kotlin_version = "1.3.50"
     ext.spring_boot_version = "2.1.8.RELEASE"
     ext.fasterxml_version = "2.9.10"
-    ext.jaxb_version = "2.3.1"
     ext.mockito_version = "2.23.0"
     ext.junit_version = "5.3.2"
 
@@ -35,9 +34,8 @@ dependencies {
     compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: "$kotlin_version"
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
     compile group: "org.springframework.boot", name: "spring-boot-starter-web"
-    compile group: "com.fasterxml.jacks2on.module", name: 'jackson-module-afterburner', version: "$fasterxml_version"
+    compile group: "com.fasterxml.jackson.module", name: 'jackson-module-afterburner', version: "$fasterxml_version"
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "$fasterxml_version"
-    compile group: 'javax.xml.bind', name: 'jaxb-pl.api', version: "$jaxb_version"
 
     testCompile group: "org.springframework.boot", name: "spring-boot-starter-test", version: "$spring_boot_version"
     testCompile group: "org.mockito", name: "mockito-core", version: "$mockito_version"
