--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     ext.junit_version = "5.3.2"
     ext.http_client_version = "4.5"
     ext.spring_security_version = "3.1.0.RELEASE"
-    ext.spring_mongo_version = "2.2.5.RELEASE"
+    ext.google_actions_version = "1.0.0"
 
     repositories {
         jcenter()
@@ -23,6 +23,7 @@ apply plugin: "kotlin"
 apply plugin: "kotlin-spring"
 apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
+apply plugin: "project-report"
 
 jar {
     baseName = "corona-tifier"
@@ -41,10 +42,10 @@ dependencies {
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "$fasterxml_version"
     compile group: "org.apache.httpcomponents", name: "httpclient", version: "$http_client_version"
     compile group: "org.springframework.security", name: "spring-security-core", version: "$spring_security_version"
-    compile group: "org.springframework.boot", name: "spring-boot-starter-data-mongodb", version: "$spring_mongo_version"
 
-    // TODO - clean imports below
-    compile group: 'com.google.actions', name: 'actions-on-google', version: '1.0.0'
+    compile(group: "com.google.actions", name: "actions-on-google", version: "$google_actions_version") {
+        exclude group: 'org.slf4j'
+    }
 
     testCompile group: "org.springframework.boot", name: "spring-boot-starter-test", version: "$spring_boot_version"
     testCompile group: "org.mockito", name: "mockito-core", version: "$mockito_version"
