--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     ext.spring_security_version = "3.1.0.RELEASE"
     ext.google_actions_version = "1.0.0"
     ext.jsoup_version = "1.13.1"
+    ext.wiremock_version = "2.25.1"
+    ext.spock_version = "1.3-groovy-2.5"
+    ext.groovy_version = "2.5.8"
 
     repositories {
         jcenter()
@@ -21,6 +24,7 @@ buildscript {
 }
 
 apply plugin: "kotlin"
+apply plugin: "groovy"
 apply plugin: "kotlin-spring"
 apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
@@ -50,8 +54,36 @@ dependencies {
 
     compile group: "org.jsoup", name: "jsoup", version: "$jsoup_version"
 
+    testCompile group: "org.spockframework", name: "spock-core", version: "$spock_version"
+    testCompile group: "org.codehaus.groovy", name: "groovy-all", version: "$groovy_version"
+    testCompile group: "org.spockframework", name: "spock-spring", version: "$spock_version"
     testCompile group: "org.springframework.boot", name: "spring-boot-starter-test", version: "$spring_boot_version"
     testCompile group: "org.mockito", name: "mockito-core", version: "$mockito_version"
     testCompile group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "$junit_version"
     testCompile group: "org.springframework.boot", name: "spring-boot-starter-test"
+    testImplementation group: "com.github.tomakehurst", name: "wiremock", version: "$wiremock_version"
 }
+
+sourceSets {
+    integration {
+        groovy.srcDir "$projectDir/src/integration/groovy"
+        resources.srcDir "$projectDir/src/integration/resources"
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+    }
+}
+
+configurations {
+    integrationImplementation.extendsFrom testImplementation
+    integrationRuntime.extendsFrom testRuntime
+}
+
+task integrationTest(type: Test) {
+    group = "verification"
+    description = "Run integartion tests"
+    testClassesDirs = sourceSets.integration.output.classesDirs
+    classpath = sourceSets.integration.runtimeClasspath
+}
+
+check.dependsOn integrationTest
+check.dependsOn test
