Exclude model package from code coverage report

--- a/build.gradle
+++ b/build.gradle
@@ -108,12 +108,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(
-                    dir: it,
-                    exclude: [
-                            'model/**',
-                    ]
-            )
+            fileTree(dir: it, exclude: 'pl/model/**')
         })
     }
 }
