--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,13 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: 'pl/model/**')
+            fileTree(dir: it, exclude: [
+                    'pl/model/**',
+                    'pl/entity/**',
+                    'pl/config/**',
+                    'pl/AppRunner**',
+                    'pl/Logger**'
+            ])
         })
     }
 }
