Api integration tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ cases:
   cron: "0 0 8-23 ? * * *"
 
 facebook:
-  api-url: "https://graph.facebook.com/v6.0/me/messages"
+  api-url: "https://graph.facebook.com"
 
 jokes:
   api-url: "http://piszsuchary.pl"
